# babel_tower

./: .gitignore  IMPLEMENTATION.md  README.md  TASKS.yml  TTS_SETUP.md  UPSTREAM_REVIEW.md  devops.py  main.py  pyproject.toml  voice-session-skill.md
.claude/commands/: voice.md
app/babel_tower/: audio.py  cli.py  config.py  daemon.py  mcp_server.py  output.py  pipeline.py  processing.py  review.py  serve.py  state.py  stt.py  telegram_bot.py  tts.py
docker/: Dockerfile.app  docker-compose.laptop.yml  docker-compose.m5.yml  docker-compose.yml
prompts/: _formatting.md  bereinigen.md  clean.md  durchreichen.md  revise.md  structure.md  strukturieren.md
scripts/: babel-toggle
tests/: conftest.py  test_audio.py  test_config.py  test_daemon.py  test_mcp_server.py  test_output.py  test_pipeline.py  test_processing.py  test_review.py  test_state.py  test_stt.py  test_telegram_bot.py  test_tts.py
tests/stt_evaluation/: evaluate.py  sentences.json
